<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">Yoloo</string>
  <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Morbi sit amet massa pharetra, volutpat risus ac, lobortis ante.
    Ut tempor, ex vitae egestas varius.</string>
  <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Morbi sit amet massa pharetra, volutpat risus ac, lobortis ante.
    Ut tempor, ex vitae egestas varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Morbi sit amet massa pharetra, volutpat risus ac, lobortis ante.
    Ut tempor, ex vitae egestas varius. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Morbi sit amet massa pharetra, volutpat risus ac, lobortis ante.
    Ut tempor, ex vitae egestas varius.</string>
  <string name="facebook_app_id" translatable="false">1587185934920884</string>
  <string name="fb_login_protocol_scheme" translatable="false">fb1587185934920884</string>
  <string name="nav_profile_title">Profile</string>
  <string name="nav_explore_title">Explore</string>
  <string name="label_nav_bookmarks">Bookmarks</string>
  <string name="label_nav_invite_friends">Invite Friends</string>
  <string name="label_nav_settings">Settings</string>
  <string name="label_nav_feedback">Send Feedback</string>
  <string name="label_nav_rate">Rate Us</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="label_feed_toolbar_title">Home</string>
  <string name="feed_recommended_groups_title">Recommended Groups</string>
  <string name="label_feed_explore">Explore</string>
  <string name="label_feed_trending_blogs_title">Trending Blogs</string>
  <string name="label_feed_bookmarked">Post saved.</string>
  <string name="label_feed_unbookmarked">Post unsaved.</string>
  <string name="label_feed_read_more_news">More</string>
  <string name="label_feed_no_data_1">Oops, we don\'t have posts…</string>
  <string name="label_feed_no_data_2">Take a deep breath and ask a question.</string>
  <string name="label_feed_read_more">%1$s… read more</string>
  <string name="action_feed_popup_bookmark">Bookmark</string>
  <string name="action_feed_popup_unbookmark">Unbookmark</string>
  <string name="action_feed_popup_edit">Edit</string>
  <string name="action_feed_popup_delete">Delete</string>
  <string name="action_feed_share">Share</string>
  <string name="action_feed_bounty_questions">Bounty Posts</string>
  <string name="action_feed_fab_ask_question">Ask question</string>
  <string name="action_feed_fab_share_trip">Share trip</string>
  <string name="action_feed_menu_search">Search</string>
  <string name="action_feed_menu_message">Message</string>
  <string name="action_feed_menu_notification">Notification</string>
  <string name="transition_content_photo">transition_content_photo</string>
  <string name="label_toolbar_bookmark_title">Saved posts</string>
  <string name="hint_editor_write_title">Click here to write title…</string>
  <string name="hint_editor_blog_content">Write anything about your trip here…</string>
  <string name="hint_editor_question_content">Ask anything about your trip here…</string>
  <string name="hint_editor_max_tags">Add up to 7 tags</string>
  <string name="action_editor_add_bounty">Add bounty</string>
  <string-array name="action_editor_list_media_source">
    <item>From gallery</item>
    <item>From camera</item>
  </string-array>
  <string name="action_editor_post">POST</string>
  <string name="label_editor_delete_cover_image">Do you want to delete image?</string>
  <string name="label_editor_select_media_source_title">Select media</string>
  <string name="label_select_media">Select media</string>
  <string name="label_editor_crop_image_title">Crop Image</string>
  <string name="label_tag">#%1$s</string>
  <string name="label_editor_ensure_bounty">Do you want to add %1$d bounty?</string>
  <string name="label_editor_bounty_description">
    You will increase the chance of getting answered by adding bounty to your post.
  </string>
  <string-array name="label_editor_bounties">
    <item>10</item>
    <item>20</item>
    <item>30</item>
    <item>40</item>
    <item>50</item>
  </string-array>
  <string name="label_editor_select_bounty_value">SELECT A BOUNTY</string>
  <string name="label_editor_trending_tags_title">Trending Tags</string>
  <string name="error_editor_not_enough_bounty">You don\'t have enough bounty :(</string>
  <string name="label_sending_post">Sending post…</string>
  <string name="label_sending_post_successful">Successfully sent.</string>
  <string name="label_sending_post_failed">Failed.</string>
  <string name="label_catalog_toolbar_title">Select a Group</string>
  <string name="label_main_catalog_toolbar_title">All Categories</string>
  <string name="action_catalog_discard_draft">Do you want to discard?</string>
  <string name="action_catalog_next">NEXT</string>
  <string name="error_catalog_select_category">Please select category!</string>
  <string name="label_comment_toolbar_title">Comments</string>
  <string name="label_comment_accepted">Accepted</string>
  <string name="label_comment_accepted_confirm">You accepted this comment.</string>
  <string name="hint_comment_write">Write a comment…</string>
  <string name="action_comment_accept">Accept</string>
  <string-array name="action_comment_dialog">
    <item>Delete</item>
  </string-array>
  <string name="error_comment_accept_exists">You can\'t accept comment.</string>
  <string name="label_follow_followers_title">Followers</string>
  <string name="label_follow_following_title">Following</string>
  <string name="label_profile_level">Level %1$d</string>
  <string name="label_profile_posts">%1$s\nposts</string>
  <string name="label_profile_follower_count">FOLLOWERS</string>
  <string name="label_profile_following_count">FOLLOWING</string>
  <string name="label_profile_points">%1$s\nPOINTS</string>
  <string name="label_profile_bounties">%1$d\nBOUNTIES</string>
  <string name="label_profile_countries">%1$d\nCOUNTRIES</string>
  <string name="label_profile_tab_posts">Posts</string>
  <string name="label_profile_tab_photos">Photos</string>
  <string name="label_profile_tab_interests">Interests</string>
  <string name="label_profile_username">\@%1$s</string>
  <string name="action_profile_follow">Follow</string>
  <string name="action_profile_unfollow">Unfollow</string>
  <string name="action_profile_menu_settings">Edit Profile</string>
  <string name="hint_search">Search…</string>
  <string name="label_search_tags">Tags</string>
  <string name="label_search_users">People</string>
  <string name="label_search_post_count">%1$d public posts</string>
  <string name="label_search_followed">You followed %1$s</string>
  <string name="label_search_unfollowed">You unfollowed %1$s</string>
  <string name="label_notification_title">Notifications</string>
  <string name="label_notification_comment">\@%1$s commented on your post</string>
  <string name="label_notification_mention">\@%1$s mentioned you in a comment: %2$s</string>
  <string name="label_notification_new_user_post">\@%1$s shared a new post</string>
  <string name="label_notification_new_group_post">A new post shared in %1$s</string>
  <string name="label_notification_follow">\@%1$s followed you</string>
  <string name="label_notification_accept">Your comment is accepted</string>
  <string name="label_notification_game_level_up">🎊🎉 Congrats! You reached Level %1$s</string>
  <string name="label_notification_game_together">🎊🎉🏅 You earned  %1$s bounties and %2$s points</string>
  <string name="label_notification_game_with_bounty">🎊🎉 You earned 🏅 %1$s bounties</string>
  <string name="label_notification_game_with_points">🎊🎉 You earned 🎖 %1$s points</string>
  <string name="error_network_unavailable">Network unavailable.
    Your post will be sent when network is available.</string>
  <string name="label_login_welcome_title">Welcome to Yoloo</string>
  <string name="label_login_welcome_description">Plan your trip, share your experience,
    and connect with travelers.
  </string>
  <string name="label_login_or">or</string>
  <string name="label_loading">Loading</string>
  <string name="action_login_start_using">Start Using</string>
  <string name="action_login_already_have_account">
    <![CDATA[Already have an account?&#160;&#160;<b>Sign in</b>]]>
  </string>
  <string name="action_login_sign_up">Sign Up</string>
  <string name="action_login_google_sign_in">Continue with Google</string>
  <string name="action_login_facebook_sing_in">Continue with Facebook</string>
  <string name="action_login_ready">I\'m ready</string>
  <string name="action_login_sign_in">Sign In</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="action_sing_up_short">Sign up</string>
  <string name="error_google_play_services">Google Play Services error.</string>
  <string name="error_auth_failed">Authentication failed.</string>
  <string name="error_server_down">Server is not available!</string>
  <string name="error_already_registered">Already registered.</string>
  <string name="error_unknownhost">Internet is unavailable.</string>
  <string name="error_invalid_email">Invalid email</string>
  <string name="error_email_already_taken">Email is in use</string>
  <string name="error_invalid_password">Your password must include at least 4 characters</string>
  <string name="error_field_required">Required field</string>
  <string name="error_field_username_unavailable">Username is already taken</string>
  <string name="hint_full_name">Full Name</string>
  <string name="hint_username">Username</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="hint_birthday">Set Birthday</string>
  <string name="hint_country_prompt">Select Your Country</string>
  <string name="idp_name_google">Google</string>
  <string name="idp_name_facebook">Facebook</string>
  <string name="label_newcomers_group_title">Recently Joined</string>
  <string name="label_newcomers_group_action">See All</string>
  <string name="label_profile_edit_title">Edit Profile</string>
  <string name="label_profile_edit_change_photo">Change Photo</string>
  <string name="label_profile_edit_personal_info_header">Personal Info</string>
  <string name="label_profile_edit_extra_info_header">Extra Info</string>
  <string name="label_profile_edit_menu_save">Save</string>
  <string name="hint_profile_edit_realname">Real Name</string>
  <string name="hint_profile_edit_username">Username</string>
  <string name="hint_profile_edit_website">Website</string>
  <string name="hint_profile_edit_bio">Bio</string>
  <string name="hint_profile_edit_email">E-mail</string>
  <string name="showcase_welcome_sub">Get ready for meeting travelers worldwide and share your trips.</string>
  <string name="showcase_welcome_next">Next</string>
  <string name="sign_up_continue">Continue</string>
  <string name="sign_up_password_title">Create your password</string>
  <string name="sign_up_password_info">Your password must contain at least 6 characters.</string>
  <string name="sign_up_prepared_info">Check your information before continuing</string>
  <string name="sign_up_prepared_title">Is correct?</string>
  <string name="sign_up_name">Name</string>
  <string name="sign_up_email">E-mail</string>
  <string name="sign_up_password">Password</string>
  <string name="sign_up_username">Username</string>
  <string name="sign_up_birthday">Birthday</string>
  <string name="group_posts_empty_title">Oops, the group doesn\'t have posts</string>
  <string name="group_posts_empty_subtitle">Be the first one to share a post\nAll others will be jealous</string>
  <string name="group_posts_empty_action_text">Share a post now</string>
</resources>