<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primary">

  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:background="@android:color/transparent"
    android:theme="@style/Yoloo.AppBarOverlay"
    app:elevation="0dp">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar_sign_up"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:popupTheme="@style/Yoloo.PopupOverlay" />

  </android.support.design.widget.AppBarLayout>

  <LinearLayout
    android:id="@+id/layout_login_input_container"
    style="@style/Widget.Yoloo.InputContainer"
    android:layout_width="@dimen/_272asdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_marginTop="@dimen/_32asdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
      android:id="@+id/et_login_fullname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/edittext_login_bg"
      android:hint="@string/hint_full_name"
      android:inputType="textCapSentences" />

    <AutoCompleteTextView
      android:id="@+id/et_login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/edittext_login_bg"
      android:hint="@string/hint_email"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress" />

    <EditText
      android:id="@+id/et_login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:background="@drawable/edittext_login_bg"
      android:hint="@string/hint_password"
      android:imeActionId="@+id/sign_up"
      android:imeActionLabel="@string/action_sing_up_short"
      android:imeOptions="actionUnspecified"
      android:inputType="textPassword"
      android:maxLines="1" />

    <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height"
      android:background="@color/divider" />

    <Button
      android:id="@+id/btn_login_ready"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/action_login_ready"
      android:textAllCaps="false"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      android:textColor="@color/accent"
      android:textStyle="bold" />

  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
