<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <ImageView
    android:id="@+id/iv_login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scaleType="centerCrop"
    android:src="@drawable/login_bg" />

  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:theme="@style/Yoloo.AppBarOverlay"
    app:elevation="0dp">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:popupTheme="@style/Yoloo.PopupOverlay" />

  </android.support.design.widget.AppBarLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/_56asdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
      android:id="@+id/btn_facebook_sign_in"
      style="@style/Yoloo.Button.AccountChooser.FacebookButton"
      android:layout_width="@dimen/_240asdp"
      android:layout_height="40dp"
      android:layout_marginTop="24dp"
      android:text="@string/action_login_facebook_sing_in" />

    <Button
      android:id="@+id/btn_google_sign_in"
      style="@style/Yoloo.Button.AccountChooser.GoogleButton"
      android:layout_width="@dimen/_240asdp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/action_login_google_sign_in" />

    <com.yoloo.android.ui.widget.BaselineGridTextView
      android:id="@+id/tv_login_or"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/label_login_or"
      android:textColor="@android:color/white" />

    <Button
      android:id="@+id/btn_login_sign_up"
      style="@style/Yoloo.Button.Colored"
      android:layout_width="@dimen/_120asdp"
      android:layout_height="wrap_content"
      android:text="@string/action_login_sign_up" />

  </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
