<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/empty_view"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:gravity="center"
  android:padding="24dp"
  android:orientation="vertical"
  android:visibility="gone"
  tools:visibility="visible">

  <com.airbnb.lottie.LottieAnimationView
    android:id="@+id/animation_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:lottie_autoPlay="true"
    app:lottie_fileName="emoji_shock.json"
    app:lottie_loop="true" />

  <com.yoloo.android.ui.widget.BaselineGridTextView
    android:id="@+id/tv_empty_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawablePadding="@dimen/padding_normal"
    android:gravity="center"
    android:text="@string/group_posts_empty_title"
    android:textAppearance="@style/TextAppearance.EmptyTitle" />

  <com.yoloo.android.ui.widget.BaselineGridTextView
    android:id="@+id/tv_empty_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_micro"
    android:gravity="center"
    android:text="@string/group_posts_empty_subtitle"
    tools:visibility="visible" />

  <Button
    android:id="@+id/btn_empty_action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:text="@string/group_posts_empty_action_text"
    android:theme="@style/Yoloo.Button"
    style="@style/Yoloo.Button.Colored" />

</LinearLayout>